Bug 67796 - setting language via status bar messes up table selection
Summary: setting language via status bar messes up table selection
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.3.1 rc
Hardware: x86-64 (AMD64) Windows (All)
: medium major
Assignee: Michael Stahl (allotropia)
URL:
Whiteboard: target:4.2.0 target:4.1.4 target:4.0.6
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-08-05 16:48 UTC by Andrej
Modified: 2013-10-18 07:26 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
presentation in swf (606.79 KB, application/x-shockwave-flash)
2013-08-05 16:48 UTC, Andrej
Details
language in cell gets changed (362.87 KB, application/x-shockwave-flash)
2013-08-07 18:29 UTC, Andrej
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andrej 2013-08-05 16:48:00 UTC
Created attachment 83674 [details]
presentation in swf

1 In the beginning I have a table with all English. 
2 I change second column to German and get "multiple languages"
3 I change again and finally I get German
4 but now other columns are "multiple languages"

see video in swf

As I remember, that did not happened in previous version. Is this new bug?
Comment 1 Mike Kaganski 2013-08-07 10:41:58 UTC
Already reproducible with 4.0.3.0+ (Build ID: afa375d7f7b1094c96597bbc3793fbc9adb87d6) under Win7x64.
Not reproducible with: 4.0.2.2 -> Regression.

When a different language is set to a column using status bar or menu Tools->Language->For selection->[Language] (but not "More...") for the first time, the status bar shows "Multiple languages". However, this text is incorrect, as in reality, the language is already applied correctly. You may deselect the column in this stage and check every cell, or select it again -> language will be shown correctly.
If you don't deselect the column, but try to apply the language second time using the same procedure, the indicator will show the applied language, but this time, other cells will change language, too. Specifically, in all columns to the left of the selection, all but top cells will change language, and in all columns to the right of selection, all but bottom cells will change language. (It happens only after second application of language.)
Comment 2 Andrej 2013-08-07 18:08:31 UTC
(In reply to comment #1)
> Already reproducible with 4.0.3.0+ (Build ID:

Thank you for info
Comment 3 Andrej 2013-08-07 18:28:51 UTC
In another example I have a table has a language in cell set to English. But when I start typing, the language gets changed to German. What is up with that?

I did the demo "language2.swf" in version 4.0.3.3

thank you
Comment 4 Andrej 2013-08-07 18:29:39 UTC
Created attachment 83796 [details]
language in cell gets changed
Comment 5 Mike Kaganski 2013-08-08 01:08:43 UTC
(In reply to comment #3)
I'm not sure if this is it, but there is a feature in LO that it selects the text language based on keyboard layout. When I type words using English layout, it becomes English; if I type Russian letters, these words are Russian. Possibly You have typed these words using German layout?

If not, please file a new report, as this is another issue.
Comment 6 Andrej 2013-08-15 05:52:00 UTC
(In reply to comment #5)
> (In reply to comment #3)
> I'm not sure if this is it, but there is a feature in LO that it selects the
> text language based on keyboard layout. When I type words using English
...

Yes, this was a problem with my settings. Now I checked "Ignore system input language" and English stays English. 

But the status bar shows "Multiple languages" problem still remains.
Comment 7 Michael Stahl (allotropia) 2013-10-10 19:50:03 UTC
regression from:

commit 710eb8c34cbd8fa80b6190107856cdc1d16f7cf8
Author:     Michael Stahl <mstahl@redhat.com>
AuthorDate: Wed Mar 27 23:09:59 2013 +0100

    fdo#60513: SwCrsrShell::Push(): take position from table cursor

... though apparently the same problem does not occur when changing
other character properties, only for Language, odd...
Comment 8 Michael Stahl (allotropia) 2013-10-11 16:53:05 UTC
fixed on master.

there could possibly be more problems similar to this
introduced by the same commit (table selection unexpectedly
changing after some editing operation),
but this is apparently the only bug report of this kind.
Comment 9 Commit Notification 2013-10-11 16:58:59 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9533e01713c0170bdae030429de38756d9c5ca74

fdo#67796: sw: fix table cursor when setting language in status bar



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2013-10-14 10:48:48 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=02a4d733ef24f4350f65179f46d144de7b948799&h=libreoffice-4-1

fdo#67796: sw: fix table cursor when setting language in status bar


It will be available in LibreOffice 4.1.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2013-10-14 11:11:57 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e3fdff9d00c9ef598210853f7094e8f986586e0b&h=libreoffice-4-0

fdo#67796: sw: fix table cursor when setting language in status bar


It will be available in LibreOffice 4.0.7.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2013-10-17 16:10:56 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-0-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4898ccc561af302db3b947f3a7b983e7f4c08566&h=libreoffice-4-0-6

fdo#67796: sw: fix table cursor when setting language in status bar


It will be available already in LibreOffice 4.0.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Andrej 2013-10-17 21:53:10 UTC
Can you tell me what do you mean with "It will be available already in LibreOffice 4.0.6." ? Because right now version 4.1.2 is available.
Comment 14 Mike Kaganski 2013-10-18 07:26:45 UTC
(In reply to comment #13)
This means that it will be available in the nearest release, that is already on route, - 4.0.6. LO team maintains two branches at a time, e.g. now it is 4.1.x that is considered too early for enterprise adoption (but early adopters are encouraged to use it and report problems if they are found), and 4.0.x that is considered rock-solid and recommended for "mission-critical" applications, but lacks new features of 4.1 branch. And bugs are being fixed for both branches (and also for not-yet-released 4.2, too).

See https://wiki.documentfoundation.org/ReleasePlan for details.